@@ -4,7 +4,7 @@ import me.moirai.storyengine.core.port.inbound.adventure.UpdateAdventure;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Collections;
+import java.util.Set;
 
 import org.assertj.core.util.Maps;
 import org.junit.jupiter.api.Test;
@@ -34,7 +34,7 @@ public class UpdateAdventureTest {
                 adventure.getVisibility(),
                 adventure.getModelConfiguration().getAiModel(),
                 adventure.getModeration(),
-                adventure.getOwnerId(),
+                "RQSTRID",
                 adventure.getGameMode(),
                 adventure.getContextAttributes().nudge(),
                 adventure.getContextAttributes().remember(),
@@ -48,11 +48,11 @@ public class UpdateAdventureTest {
                 Maps.newHashMap("TKNID", 99D),
                 adventure.getModelConfiguration().getStopSequences(),
                 adventure.getModelConfiguration().getStopSequences(),
-                Collections.singleton("TKN"),
-                Collections.singleton("USRID"),
-                Collections.singleton("USRID"),
-                Collections.singleton("USRID"),
-                Collections.singleton("USRID"),
+                Set.of("TKN"),
+                Set.of(12345L),
+                Set.of(12345L),
+                Set.of(12345L),
+                Set.of(12345L),
                 adventure.isMultiplayer());
 
         // Then
